load("//build/bluespec:rules.bzl", "bluespec_library", "bluesim_test")

bluespec_library(
    name = "lanai",
    srcs = [
        "CPU_Defs.bsv",
        "Lanai_IFC.bsv",
        "Lanai_Memory.bsv",
    ],
    deps = [
        "//wishbone",
    ],
    visibility = [
        "//visibility:public",
    ],
)

bluespec_library(
    name = "cpu",
    srcs = [
        "CPU_ALU.bsv",
        "CPU_RegisterFile.bsv",
        "CPU_Compute.bsv",
        "CPU_Fetch.bsv",
        "CPU_Memory.bsv",
        "Lanai_CPU.bsv",
    ],
    deps = [
        ":lanai",
    ],
    synthesize = {
        "Lanai_CPU": ["mkLanaiCPU"],
        "CPU_ALU": ["mkALU"],
        "CPU_RegisterFile": ["mkCPURegisterFile"],
    },
    visibility = [
        "//visibility:public",
    ],
)

bluespec_library(
    name = "Tb",
    srcs = [
        "Tb.bsv",
    ],
    synthesize = {
        "Tb": ["mkTb"],
    },
    deps = [
        ":cpu",
    ],
    data = [
        ":bram.bin",
    ],
)

genrule(
    name = "bram2",
    tools = [
        "//lanai/qasm",
    ],
    cmd = "$(location //lanai/qasm) $@",
    outs = [
        "bram2.bin"
    ],
)

bluesim_test(
    name = "testbench",
    deps = [
        ":Tb",
    ],
    top = "mkTb",
)
