load("//build/bluespec:rules.bzl", "bluespec_library", "bluesim_test")

bluespec_library(
    name = "wishbone",
    srcs = [
        "Wishbone.bsv",
    ],
    visibility = ["//visibility:public"],
)

bluespec_library(
    name = "testbenches",
    srcs = [
        "TbCBus.bsv",
        "TbConnectors.bsv",
    ],
    synthesize = {
        "TbCBus": ["mkTbCBus", "mkTbCBusInner"],
        "TbConnectors": ["mkTbConnectors"],
    },
    split_if = True,
    deps = [
        ":wishbone",
    ],
)

bluesim_test(
    name = "test_cbus",
    deps = [
        ":testbenches",
    ],
    top = "mkTbCBus",
)

bluesim_test(
    name = "test_connectors",
    deps = [
        ":testbenches",
    ],
    top = "mkTbConnectors",
)

