load("//build/bluespec:rules.bzl", "bluespec_library", "bluesim_test")

bluespec_library(
    name = "wishbone",
    srcs = [
        "Wishbone.bsv",
        "WishboneCrossbar.bsv",
    ],
    visibility = ["//visibility:public"],
)

bluespec_library(
    name = "testbenches",
    srcs = [
        "TbCBus.bsv",
        "TbConnectors.bsv",
        "TbCrossbar.bsv",
    ],
    synthesize = {
        "TbCBus": ["mkTbCBus", "mkTbCBusInner"],
        "TbConnectors": ["mkTbConnectors"],
        "TbCrossbar": ["mkTbCrossbar"],
    },
    split_if = True,
    deps = [
        ":wishbone",
    ],
)

bluesim_test(
    name = "test_cbus",
    deps = [
        ":testbenches",
    ],
    top = "mkTbCBus",
)

bluesim_test(
    name = "test_connectors",
    deps = [
        ":testbenches",
    ],
    top = "mkTbConnectors",
)

bluesim_test(
    name = "test_crossbar",
    deps = [
        ":testbenches",
    ],
    top = "mkTbCrossbar",
)
