load("//build/bluespec:rules.bzl", "bluespec_library")
load("//build/synthesis:rules.bzl", "rtl_bundle")

bluespec_library(
    name = "QF100",
    srcs = [
        "Board.bsv",
    ],
    deps = [
        "//lanai:cpu",
        "//wishbone/peripherals:spi",
        "//wishbone/peripherals:gpio",
        "//systems/qf100",
    ],
    synthesize = {
        "Board": [
            "mkQF105",
        ],
    },
    data = [
        ":bram.bin",
    ],
)

rtl_bundle(
    name = "qf100",
    outputs = {
        "mkLanaiCPU": [],
        "mkQF100Memory": [],
        "mkQF100SPI": [],
        "mkQF100GPIO": [],
        "mkQF100Fabric": [],
        "mkQF105": [
            "mkLanaiCPU",
            "mkQF100Memory",
            "mkQF100SPI",
            "mkQF100GPIO",
            "mkQF100Fabric",
        ],
    },
    deps = [
        ":QF100"
    ],
)
