load("//build/bluespec:rules.bzl", "bluespec_library")
load("//build/synthesis:rules.bzl", "yosysflow_bitstream")

bluespec_library(
    name = "Board",
    srcs = [
        "Board.bsv",
    ],
    deps = [
        "//lanai:Lanai",
        "//fpga:ECP5",
    ],
    synthesize = {
        "Board": ["mkTop", "mkMemory"],
    },
    data = [
        "bram.bin",
    ],
)

yosysflow_bitstream(
    name = 'ulx3s',
    deps = [
        ":Board",
    ],
    srcs = [
        "BRAM2Load.v",
    ],
    top = "mkTop",
    constraints = "ulx3s_v20.lpf",
)
