load("//build/bluespec:rules.bzl", "bluespec_library")
load("//build/synthesis:rules.bzl", "yosysflow_bitstream")

bluespec_library(
    name = "Board",
    srcs = [
        "Board.bsv",
    ],
    deps = [
        "//lanai:cpu",
        "//fpga:ECP5",
    ],
    synthesize = {
        "Board": ["mkTop", "mkMemory"],
    },
    data = [
        ":bram",
    ],
)

genrule(
    name = "bram",
    tools = [
        "//lanai/qasm",
    ],
    cmd = "$(location //lanai/qasm) $@",
    outs = [
        "bram.bin"
    ],
)

yosysflow_bitstream(
    name = 'ulx3s',
    deps = [
        ":Board",
    ],
    srcs = [
        "BRAM2Load.v",
    ],
    top = "mkTop",
    constraints = "ulx3s_v20.lpf",
)
