load("//build/bluespec:rules.bzl", "bluespec_library", "bluesim_test")
load("//build/synthesis:rules.bzl", "rtl_bundle")

bluespec_library(
    name = "sky130_sram",
    srcs = [
        "Sky130SRAM.bsv",
    ],
    deps = [
        "//lanai",
    ],
    visibility = [ "//visibility:public" ],
)

bluespec_library(
    name = "qf100",
    srcs = [
        "QF100.bsv",
    ],
    deps = [
        "//lanai:cpu",
        "//lanai/frontend",
        "//lanai/frontend:spi_flash_controller",
        "//wishbone/peripherals:spi",
        "//wishbone/peripherals:gpio",
        "//wishbone/peripherals:kitchen_sink",
    ],
    synthesize = {
        "QF100": [
            "mkQF100BlockRAM",
            "mkQF100SPI",
            "mkQF100GPIO",
            "mkQF100KSC",
            "mkQF100Fabric",
            "mkQF100FlashController",
        ],
    },
    visibility = [ "//visibility:public" ],
)

bluespec_library(
    name = "Tb",
    srcs = [
        "SPIFlashEmulator.bsv",
        "Tb.bsv",
    ],
    data = [
        ":flash.bin",
    ],
    deps = [
        ":qf100",
        ":sky130_sram",
    ],
    synthesize = {
        "Tb": [
            "mkTbQF100",
        ],
    },
)

bluesim_test(
    name = "test_qf100",
    deps = [
        ":Tb",
    ],
    top = "mkTbQF100",
)


bluespec_library(
    name = "spi_flash_emulator",
    srcs = [
        "SPIFlashEmulator.bsv",
    ],
    visibility = [ "//visibility:public" ],
)
