load("//build/bluespec:rules.bzl", "bluespec_library", "bluesim_test")

bluespec_library(
    name = "spi",
    srcs = [
        "WishboneSPI.bsv",
    ],
    synthesize = {
        "WishboneSPI": ["mkTbSPIController"],
    },
    deps = [
        "//wishbone",
    ],
    visibility = ["//visibility:public"],
)

bluesim_test(
    name = "test_spi",
    deps = [
        ":spi",
    ],
    top = "mkTbSPIController",
)

bluespec_library(
    name = "gpio",
    srcs = [
        "WishboneGPIO.bsv",
    ],
    synthesize = {
        "WishboneGPIO": ["mkTbGPIOController"],
    },
    deps = [
        "//wishbone",
    ],
    visibility = ["//visibility:public"],
)

bluesim_test(
    name = "test_gpio",
    deps = [
        ":gpio",
    ],
    top = "mkTbGPIOController",
)

bluespec_library(
    name = "kitchen_sink",
    srcs = [
        "WishboneKitchenSink.bsv",
    ],
    synthesize = {
        "WishboneKitchenSink": ["mkTbKitchenSink"],
    },
    deps = [
        "//wishbone",
    ],
    visibility = ["//visibility:public"],
)

bluesim_test(
    name = "test_kitchen_sink",
    deps = [
        ":kitchen_sink",
    ],
    top = "mkTbKitchenSink",
)

